use xcb_time_current_time as setinputfocus default

BUG: 343430
REVIEW: 122298
FIXED-IN: 5.2.1